--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -1,3 +1,4 @@
+
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -7,44 +8,46 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <iframe width="100%" height="200px" src="https://www.youtube.com/embed/EL01-Xztuf8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <iframe width="100%" height="200px" src="https://www.youtube.com/embed/zoZQJZhgcMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <iframe width="100%" height="200px" src="https://www.youtube.com/embed/KP5JWWIQVS0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
             </div>
         </div>
       </div>
       <div class="carousel-item">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <iframe width="100%" height="200px" src="https://www.youtube.com/embed/EL01-Xztuf8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <iframe width="100%" height="200px" src="https://www.youtube.com/embed/zoZQJZhgcMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <iframe width="100%" height="200px" src="https://www.youtube.com/embed/KP5JWWIQVS0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
             </div>
         </div>
       </div>
       <div class="carousel-item">
         <div class="row">
-            <div class="col-md-3">
-                <iframe width="100%" height="200px" src="https://www.youtube.com/embed/EL01-Xztuf8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="col-md-4">
+                <iframe
+                width="100%" height="200px" src="https://www.youtube.com/embed/EL01-Xztuf8" 
+                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <iframe width="100%" height="200px" src="https://www.youtube.com/embed/zoZQJZhgcMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <iframe width="100%" height="200px" src="https://www.youtube.com/embed/KP5JWWIQVS0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
             </div>
+          </div>
         </div>
       </div>
-    </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
