--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -1,59 +1,141 @@
-
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <div class="row">
-            <div class="col-md-4">
-                <iframe width="100%" height="200px" src="https://www.youtube.com/embed/EL01-Xztuf8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="col-md-4">
-                <iframe width="100%" height="200px" src="https://www.youtube.com/embed/zoZQJZhgcMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
-            </div>
-            <div class="col-md-4">
-                <iframe width="100%" height="200px" src="https://www.youtube.com/embed/KP5JWWIQVS0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
-            </div>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="padding: 0 5px 0 5px;">
+  <div class="carousel-inner" style="display: table;">
+    <div class="carousel-item active">
+      <div class="row">
+        <div class="col-md-4" style="padding: 2px;">
+          <iframe width="100%" height="200px" src="https://www.youtube.com/embed/EL01-Xztuf8" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
+          <p style="
+              max-height: 100px; 
+              text-overflow: ellipsis; 
+              word-wrap: break-word; 
+              overflow: auto;">
+            DADADSsdasdadadadasdasaaaaaaaaaaae dsada sad ad a das daswidth="100%" height=ada das adasdasd adasd "200px"
+            src="https://wdsad da dsadasda d da dasa dasadsda dadaddaadd adadaas ad sadasd adasda dasd sda dsadsad
+            adasad adsadsada dsaaww.youtube.c" frameborder="0" allaccele</p>
+        </div>
+        <div class="col-md-4" style="padding: 2px;">
+          <iframe width="100%" height="200px" src="https://www.youtube.com/embed/zoZQJZhgcMM" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
+          <p style="
+          max-height: 100px; 
+          text-overflow: ellipsis; 
+          word-wrap: break-word; 
+          overflow: auto;">
+            DADADSsdasdadadadasdasaaaaaaaaaaae dsada sad ad a das daswidth="100%" height="200px"
+            srcdasdadsa="https://wdsad da dsadasdasdadsadsdasdasda sdada d dada dadaddaadd adada dasda dasd adas dsad
+            adsadsada dsaaww.youtube.c" frameborder="0" allaccele</p>
+        </div>
+        <div class="col-md-4" style="padding: 2px;">
+          <iframe width="100%" height="200px" src="https://www.youtube.com/embed/KP5JWWIQVS0" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
+          <p style="
+          max-height: 100px; 
+          text-overflow: ellipsis; 
+          word-wrap: break-word; 
+          overflow: auto;">
+            DADADSsdasdadadadasdasaaaaaaaaaaae dsada sad ad a das daswidth="100%" height="200px" src="https://wdsadasd
+            dsad da dsadasda d dada dadaddaadd adaddsadad dada dada da adsadasda dasda dsaasad adsadsada
+            dsaaww.youtube.c" frameborder="0" allaccele</p>
         </div>
       </div>
-      <div class="carousel-item">
-        <div class="row">
-            <div class="col-md-4">
-                <iframe width="100%" height="200px" src="https://www.youtube.com/embed/EL01-Xztuf8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="col-md-4">
-                <iframe width="100%" height="200px" src="https://www.youtube.com/embed/zoZQJZhgcMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
-            </div>
-            <div class="col-md-4">
-                <iframe width="100%" height="200px" src="https://www.youtube.com/embed/KP5JWWIQVS0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
-            </div>
+    </div>
+    <div class="carousel-item">
+      <div class="row">
+        <div class="col-md-4" style="padding: 2px;">
+          <iframe width="100%" height="200px" src="https://www.youtube.com/embed/EL01-Xztuf8" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
+          <p style="
+          max-height: 100px; 
+          text-overflow: ellipsis; 
+          word-wrap: break-word; 
+          overflow: auto;">
+            DADADSsdasdadadadasdasaaaaaaaaaaae dsada sad ad a das daswidth="100%" height=ada das adasdasd adasd "200px"
+            src="https://wdsad da dsadasda d da dasa dasadsda dadaddaadd adadaas ad sadasd adasda dasd sda dsadsad
+            adasad adsadsada dsaaww.youtube.c" frameborder="0" allaccele</p>
+        </div>
+        <div class="col-md-4" style="padding: 2px;">
+          <iframe width="100%" height="200px" src="https://www.youtube.com/embed/zoZQJZhgcMM" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
+          <p style="
+          max-height: 100px; 
+          text-overflow: ellipsis; 
+          word-wrap: break-word; 
+          overflow: auto;">
+            DADADSsdasdadadadasdasaaaaaaaaaaae dsada sad ad a das daswidth="100%" height="200px"
+            srcdasdadsa="https://wdsad da dsadasdasdadsadsdasdasda sdada d dada dadaddaadd adada dasda dasd adas dsad
+            adsadsada dsaaww.youtube.c" frameborder="0" allaccele</p>
+        </div>
+        <div class="col-md-4" style="padding: 2px;">
+          <iframe width="100%" height="200px" src="https://www.youtube.com/embed/KP5JWWIQVS0" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
+          <p style="
+          max-height: 100px; 
+          text-overflow: ellipsis; 
+          word-wrap: break-word; 
+          overflow: auto;">
+            DADADSsdasdadadadasdasaaaaaaaaaaae dsada sad ad a das daswidth="100%" height="200px" src="https://wdsadasd
+            dsad da dsadasda d dada dadaddaadd adaddsadad dada dada da adsadasda dasda dsaasad adsadsada
+            dsaaww.youtube.c" frameborder="0" allaccele</p>
         </div>
       </div>
-      <div class="carousel-item">
-        <div class="row">
-            <div class="col-md-4">
-                <iframe
-                width="100%" height="200px" src="https://www.youtube.com/embed/EL01-Xztuf8" 
-                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="col-md-4">
-                <iframe width="100%" height="200px" src="https://www.youtube.com/embed/zoZQJZhgcMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
-            </div>
-            <div class="col-md-4">
-                <iframe width="100%" height="200px" src="https://www.youtube.com/embed/KP5JWWIQVS0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
-            </div>
-          </div>
+    </div>
+    <div class="carousel-item">
+      <div class="row">
+        <div class="col-md-4" style="padding: 2px;">
+          <iframe width="100%" height="200px" src="https://www.youtube.com/embed/EL01-Xztuf8" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
+          <p style="
+          max-height: 100px; 
+          text-overflow: ellipsis; 
+          word-wrap: break-word; 
+          overflow: auto;">
+            DADADSsdasdadadadasdasaaaaaaaaaaae dsada sad ad a das daswidth="100%" height=ada das adasdasd adasd "200px"
+            src="https://wdsad da dsadasda d da dasa dasadsda dadaddaadd adadaas ad sadasd adasda dasd sda dsadsad
+            adasad adsadsada dsaaww.youtube.c" frameborder="0" allaccele</p>
+        </div>
+        <div class="col-md-4" style="padding: 2px;">
+          <iframe width="100%" height="200px" src="https://www.youtube.com/embed/zoZQJZhgcMM" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
+          <p style="
+          max-height: 100px; 
+          text-overflow: ellipsis; 
+          word-wrap: break-word; 
+          overflow: auto;">
+            DADADSsdasdadadadasdasaaaaaaaaaaae dsada sad ad a das daswidth="100%" height="200px"
+            srcdasdadsa="https://wdsad da dsadasdasdadsadsdasdasda sdada d dada dadaddaadd adada dasda dasd adas dsad
+            adsadsada dsaaww.youtube.c" frameborder="0" allaccele</p>
+        </div>
+        <div class="col-md-4" style="padding: 2px;">
+          <iframe width="100%" height="200px" src="https://www.youtube.com/embed/KP5JWWIQVS0" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
+          <p style="
+          max-height: 100px; 
+          text-overflow: ellipsis; 
+          word-wrap: break-word; 
+          overflow: auto;">
+            DADADSsdasdadadadasdasaaaaaaaaaaae dsada sad ad a das daswidth="100%" height="200px" src="https://wdsadasd
+            dsad da dsadasda d dada dadaddaadd adaddsadad dada dada da adsadasda dasda dsaasad adsadsada
+            dsaaww.youtube.c" frameborder="0" allaccele</p>
         </div>
       </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+    </div>
   </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
