--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header style="margin-bottom: 7px;">
   <div class="row">
     <div class="col-xs-12">
       <img src="https://www.aquaviva.rs/wp-content/themes/aqua-viva/assets/media/images/slider-05.png" alt="slika" style="width: 100%; height: 70px;">
