--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,9 @@
            
             <!-- routes will be rendered here -->
             <router-outlet></router-outlet> 
+            <app-description></app-description>
             <app-videos></app-videos>
+            <app-linklist></app-linklist>
             
     
             <!-- footer -->
