--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     
     <!-- header -->
     <app-header></app-header>
-\    <div id="wrapper" style="background-color: cornsilk"> <!--class="jumbotron jumbtron-fluid"-->
+    <div id="wrapper" style="background-color: cornsilk"> <!--class="jumbotron jumbtron-fluid"-->
       <div class="container" style="background-color: cornsilk; padding : 0;">
         <div class="row" style="margin: 0; background-color: cornsilk">
           <div class="col-md-10 offset-md-1" style="background-color: white; padding : 5px;">
