--- a/src/app/linklist/linklist.component.html
+++ b/src/app/linklist/linklist.component.html
@@ -15,26 +15,26 @@
 
 
 
+        <div class="col-md-4">
+          <div class="col-md-8" style="padding: 0;">
+            <img src="https://www.artskcgo.com/wp-content/uploads/sites/www.artskcgo.com/images/2017/08/primary-National-Geographic-Live---Pete-McBride---Kevin-Fedarko--Between-River---Rim-1501624873-400x400.jpeg"   alt="slika" style="max-width: 100%; max-height: 200px">
+          </div>  
 
-      <div class="col-md-4">
-          <div class="row">
-            <img src="https://www.artskcgo.com/wp-content/uploads/sites/www.artskcgo.com/images/2017/08/primary-National-Geographic-Live---Pete-McBride---Kevin-Fedarko--Between-River---Rim-1501624873-400x400.jpeg"  alt="slika"  style=" height: 200px;">
-              <div>
-                <h4>Test</h4>
-                <p>d idiwd qjpoqskok</p>
-              </div>
+          <div class="col-md-4" style="padding: 0 0 0 5px;">
+            <h4>Test</h4>
+            <p>d idiwd qjpoqskok ff</p>
           </div>
-      </div>
+        </div>
+        <div class="col-md-4">
+          <div class="col-md-8" style="padding: 0;">
+            <img src="http://lornebalfe.com/wp-content/uploads/2017/06/genius-s1-cover-400x400.jpg"   alt="slika" style="max-width: 100%; max-height: 200px">
+          </div>  
 
-      <div class="col-md-4">
-          <div class="row">
-            <img src="http://lornebalfe.com/wp-content/uploads/2017/06/genius-s1-cover-400x400.jpg"  alt="slika"  style=" height: 200px;">
-              <div>
-                <h4>Test</h4>
-                <p>d idiwd qjpoqskok</p>
-              </div>
+          <div class="col-md-4" style="padding: 0 0 0 5px;">
+            <h4>Test</h4>
+            <p>d idiwd qjpoqskok ff</p>
           </div>
-      </div>
+        </div>
 
       
 
