--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -2,7 +2,7 @@
   <div class="carousel-inner" style="display: table;">
     <div class="carousel-item active">
       <div class="row">
-        <div class="col-md-4" style="padding: 2px;">
+        <div class="col-md-4" >
           <iframe width="100%" height="200px" src="https://www.youtube.com/embed/EL01-Xztuf8" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
@@ -15,7 +15,7 @@
             src="https://wdsad da dsadasda d da dasa dasadsda dadaddaadd adadaas ad sadasd adasda dasd sda dsadsad
             adasad adsadsada dsaaww.youtube.c" frameborder="0" allaccele</p>
         </div>
-        <div class="col-md-4" style="padding: 2px;">
+        <div class="col-md-4" >
           <iframe width="100%" height="200px" src="https://www.youtube.com/embed/zoZQJZhgcMM" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
@@ -28,7 +28,7 @@
             srcdasdadsa="https://wdsad da dsadasdsadasddasdadsadsdasdasda sdada d dada dadaddaadd adada dasda dasd adas dsad
             adsadsada dsaaww.youtube.c" frameborder="0" allaccele</p>
         </div>
-        <div class="col-md-4" style="padding: 2px;">
+        <div class="col-md-4" >
           <iframe width="100%" height="200px" src="https://www.youtube.com/embed/KP5JWWIQVS0" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
@@ -45,7 +45,7 @@
     </div>
     <div class="carousel-item">
       <div class="row">
-        <div class="col-md-4" style="padding: 2px;">
+        <div class="col-md-4">
           <iframe width="100%" height="200px" src="https://www.youtube.com/embed/EL01-Xztuf8" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
@@ -58,7 +58,7 @@
             src="https://wdsad da dsadasda d da dasa dasadsda dadaddaadd adadaas ad sadasd adasda dasd sda dsadsad
             adasad adsadsada dsaaww.youtube.c" frameborder="0" allaccele</p>
         </div>
-        <div class="col-md-4" style="padding: 2px;">
+        <div class="col-md-4">
           <iframe width="100%" height="200px" src="https://www.youtube.com/embed/zoZQJZhgcMM" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
@@ -71,7 +71,7 @@
             srcdasdadsa="https://wdsad da dsadasdasdadsadsdasdasda sdada d dada dadaddaadd adada dasda dasd adas dsad
             adsadsada dsaaww.youtube.c" frameborder="0" allaccele</p>
         </div>
-        <div class="col-md-4" style="padding: 2px;">
+        <div class="col-md-4">
           <iframe width="100%" height="200px" src="https://www.youtube.com/embed/KP5JWWIQVS0" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
@@ -88,7 +88,7 @@
     </div>
     <div class="carousel-item">
       <div class="row">
-        <div class="col-md-4" style="padding: 2px;">
+        <div class="col-md-4">
           <iframe width="100%" height="200px" src="https://www.youtube.com/embed/EL01-Xztuf8" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
@@ -101,7 +101,7 @@
             src="https://wdsad da dsadasda d da dasa dasadsda dadaddaadd adadaas ad sadasd adasda dasd sda dsadsad
             adasad adsadsada dsaaww.youtube.c" frameborder="0" allaccele</p>
         </div>
-        <div class="col-md-4" style="padding: 2px;">
+        <div class="col-md-4">
           <iframe width="100%" height="200px" src="https://www.youtube.com/embed/zoZQJZhgcMM" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
@@ -114,7 +114,7 @@
             srcdasdadsa="https://wdsad da dsadasdasdadsadsdasdasda sdada d dada dadaddaadd adada dasda dasd adas dsad
             adsadsada dsaaww.youtube.c" frameborder="0" allaccele</p>
         </div>
-        <div class="col-md-4" style="padding: 2px;">
+        <div class="col-md-4">
           <iframe width="100%" height="200px" src="https://www.youtube.com/embed/KP5JWWIQVS0" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
