--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -5,7 +5,7 @@
         <div class="col-md-4" >
           <iframe width="105%" height="200px" src="https://www.youtube.com/embed/EL01-Xztuf8" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h5 style="text-align: center; font-weight: bold"> {{SOME TITLE}}</h5>
+          <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
           <p style="
               max-height: 100px; 
               text-overflow: ellipsis; 
