--- a/src/app/linklist/linklist.component.html
+++ b/src/app/linklist/linklist.component.html
@@ -10,7 +10,7 @@
 
           
             <h4 class ="title"><a href="https://www.24kitchen.rs/chefs/rudolf-van-vin">Steam Ship in Red Sea</a></h4>
-            <p class="fontSize">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in
+            <p class="fontSize">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in...
             </p>
           
         </div>
@@ -25,7 +25,7 @@
 
           
             <h4 class ="title"><a href="https://www.24kitchen.rs/chefs/rudolf-van-vin">National Geographic Photo of the year</a></h4>
-            <p class="fontSize">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in</p>
+            <p class="fontSize">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in...</p>
           
         </div>
         <div class="col-md-3">
@@ -35,7 +35,7 @@
 
           
             <h4 class ="title"><a href="https://www.24kitchen.rs/chefs/rudolf-van-vin">Genius</a></h4>
-            <p class="fontSize">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in</p>
+            <p class="fontSize">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in...</p>
           
         </div>
       <div class="col-md-3">
@@ -45,7 +45,7 @@
 
         
           <h4 class ="title"><a href="https://www.24kitchen.rs/chefs/rudolf-van-vin">Easy Meals in 10 minutes</a></h4>
-          <p class="fontSize">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in</p>
+          <p class="fontSize">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in...</p>
         
       </div>
 
