--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -1,144 +1,53 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="padding: 0 5px 0 5px;">
-  <div class="carousel-inner" style="display: table;">
-    <div class="carousel-item active">
-      <div class="row">
-        <div class="col-md-4" >
-          <iframe width="105%" height="200px" src="https://www.youtube.com/embed/EL01-Xztuf8" frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
-          <p style="
-              max-height: 100px; 
-              text-overflow: ellipsis; 
-              word-wrap: break-word; 
-              overflow: auto;
-              width: 105%;">
-            DADADSsdasdadadadasdasaaaaaaaaaaae dsada sad ad a das daswidth="100%" height=ada das adasdasd adasd "200px"
-            src="https://wdsad da dsadasda d da dasa dasadsda dadaddaadd adadaas ad sadasd adasda dasd sda dsadsad
-            adasad adsadsada dsaaww.youtube.c" frameborder="0" allaccele</p>
-        </div>
-        <div class="col-md-4" >
-          <iframe width="105%" height="200px" src="https://www.youtube.com/embed/zoZQJZhgcMM" frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
-          <p style="
-          max-height: 100px; 
-          text-overflow: ellipsis; 
-          word-wrap: break-word; 
-          overflow: auto;
-          width: 105%;">
-            DADADSsdasdadadadasdasaaaaaaaaaaae dsada sad ad a das daswidth="100%" height="200px"
-            srcdasdadsa="https://wdsad da dsadasdsadasddasdadsadsdasdasda sdada d dada dadaddaadd adada dasda dasd adas dsad
-            adsadsada dsaaww.youtube.c" frameborder="0" allaccele</p>
-        </div>
-        <div class="col-md-4" >
-          <iframe width="105%" height="200px" src="https://www.youtube.com/embed/KP5JWWIQVS0" frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
-          <p style="
-          max-height: 100px; 
-          text-overflow: ellipsis; 
-          word-wrap: break-word; 
-          overflow: auto;
-          width: 100%;">
-            DADADSsdasdadadadasdasaaaaaaaaaaae dsada sad ad a das daswidth="100%" height="200px" src="https://wdsadasd
-            dsad da dsadasda d dada dadaddaadd adaddsadad dada dada da adsadasda dasda dsaasad adsadsada
-            dsaaww.youtube.c" frameborder="0" allaccele</p>
-        </div>
-      </div>
+<div style="padding-top: 30px">
+  <h3 class="articleTitle">Videos</h3>
+  <hr style="margin-top: 0">
+  <div class="row">
+    <div class="col-md-3">
+      <iframe width="105%" height="150px" src={{yt+item[0].value}} frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h4 class="title"><a href="https://www.youtube.com/watch?v=r5rB_zws1Ww">{{item.title}}</a></h4>
+      <p class="fontSize">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+        printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five
+        centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised
+        in...
+      </p>
     </div>
-    <!--<div class="carousel-item">
-      <div class="row">
-        <div class="col-md-4">
-          <iframe width="100%" height="200px" src="https://www.youtube.com/embed/EL01-Xztuf8" frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
-          <p style="
-          max-height: 100px; 
-          text-overflow: ellipsis; 
-          word-wrap: break-word; 
-          overflow: auto;">
-            DADADSsdasdadadadasdasaaaaaaaaaaae dsada sad ad a das daswidth="100%" height=ada das adasdasd adasd "200px"
-            src="https://wdsad da dsadasda d da dasa dasadsda dadaddaadd adadaas ad sadasd adasda dasd sda dsadsad
-            adasad adsadsada dsaaww.youtube.c" frameborder="0" allaccele</p>
-        </div>
-        <div class="col-md-4">
-          <iframe width="100%" height="200px" src="https://www.youtube.com/embed/zoZQJZhgcMM" frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
-          <p style="
-          max-height: 100px; 
-          text-overflow: ellipsis; 
-          word-wrap: break-word; 
-          overflow: auto;">
-            DADADSsdasdadadadasdasaaaaaaaaaaae dsada sad ad a das daswidth="100%" height="200px"
-            srcdasdadsa="https://wdsad da dsadasdasdadsadsdasdasda sdada d dada dadaddaadd adada dasda dasd adas dsad
-            adsadsada dsaaww.youtube.c" frameborder="0" allaccele</p>
-        </div>
-        <div class="col-md-4">
-          <iframe width="100%" height="200px" src="https://www.youtube.com/embed/KP5JWWIQVS0" frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
-          <p style="
-          max-height: 100px; 
-          text-overflow: ellipsis; 
-          word-wrap: break-word; 
-          overflow: auto;">
-            DADADSsdasdadadadasdasaaaaaaaaaaae dsada sad ad a das daswidth="100%" height="200px" src="https://wdsadasd
-            dsad da dsadasda d dada dadaddaadd adaddsadad dada dada da adsadasda dasda dsaasad adsadsada
-            dsaaww.youtube.c" frameborder="0" allaccele</p>
-        </div>
-      </div>
+    <div class="col-md-3">
+      <a href="https://www.24kitchen.rs/chefs/rudolf-van-vin">
+        <img width="100%" height="150px"
+          src="https://www.artskcgo.com/wp-content/uploads/sites/www.artskcgo.com/images/2017/08/primary-National-Geographic-Live---Pete-McBride---Kevin-Fedarko--Between-River---Rim-1501624873-400x400.jpeg"
+          alt="slika" style="max-width: 100%; max-height: 200px">
+      </a>
+      <h4 class="title"><a href="https://www.24kitchen.rs/chefs/rudolf-van-vin">National Geographic Photo of the
+          year</a></h4>
+      <p class="fontSize">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+        printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five
+        centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised
+        in...</p>
     </div>
-    <div class="carousel-item">
-      <div class="row">
-        <div class="col-md-4">
-          <iframe width="100%" height="200px" src="https://www.youtube.com/embed/EL01-Xztuf8" frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
-          <p style="
-          max-height: 100px; 
-          text-overflow: ellipsis; 
-          word-wrap: break-word; 
-          overflow: auto;">
-            DADADSsdasdadadadasdasaaaaaaaaaaae dsada sad ad a das daswidth="100%" height=ada das adasdasd adasd "200px"
-            src="https://wdsad da dsadasda d da dasa dasadsda dadaddaadd adadaas ad sadasd adasda dasd sda dsadsad
-            adasad adsadsada dsaaww.youtube.c" frameborder="0" allaccele</p>
-        </div>
-        <div class="col-md-4">
-          <iframe width="100%" height="200px" src="https://www.youtube.com/embed/zoZQJZhgcMM" frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
-          <p style="
-          max-height: 100px; 
-          text-overflow: ellipsis; 
-          word-wrap: break-word; 
-          overflow: auto;">
-            DADADSsdasdadadadasdasaaaaaaaaaaae dsada sad ad a das daswidth="100%" height="200px"
-            srcdasdadsa="https://wdsad da dsadasdasdadsadsdasdasda sdada d dada dadaddaadd adada dasda dasd adas dsad
-            adsadsada dsaaww.youtube.c" frameborder="0" allaccele</p>
-        </div>
-        <div class="col-md-4">
-          <iframe width="100%" height="200px" src="https://www.youtube.com/embed/KP5JWWIQVS0" frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h5 style="text-align: center; font-weight: bold"> SOME TITLE</h5>
-          <p style="
-          max-height: 100px; 
-          text-overflow: ellipsis; 
-          word-wrap: break-word; 
-          overflow: auto;">
-            DADADSsdasdadadadasdasaaaaaaaaaaae dsada sad ad a das daswidth="100%" height="200px" src="https://wdsadasd
-            dsad da dsadasda d dada dadaddaadd adaddsadad dada dada da adsadasda dasda dsaasad adsadsada
-            dsaaww.youtube.c" frameborder="0" allaccele</p>
-        </div>
-      </div>
-    </div>-->
+    <div class="col-md-3">
+      <a href="https://www.24kitchen.rs/chefs/rudolf-van-vin">
+        <img width="100%" height="150px"
+          src="http://lornebalfe.com/wp-content/uploads/2017/06/genius-s1-cover-400x400.jpg" alt="slika"
+          style="max-width: 100%; max-height: 200px">
+      </a>
+      <h4 class="title"><a href="https://www.24kitchen.rs/chefs/rudolf-van-vin">Genius</a></h4>
+      <p class="fontSize">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+        printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five
+        centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised
+        in...</p>
+    </div>
+    <div class="col-md-3">
+      <a href="https://www.24kitchen.rs/chefs/rudolf-van-vin">
+        <img width="105%" height="150px"
+          src="https://www.pngkit.com/png/detail/83-834497_free-meal-plan-offer-people-eating-healthy-food.png"
+          alt="slika" style="max-width: 100%; max-height: 200px">
+      </a>
+      <h4 class="title"><a href="https://www.24kitchen.rs/chefs/rudolf-van-vin">Easy Meals in 10 minutes</a></h4>
+      <p class="fontSize">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+        printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five
+        centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised
+        in...</p>
+    </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev" style="width: 5%; height: 60%;">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next" style="width: 5%; height: 60%;">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
