--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -1,11 +1,14 @@
 <div style="padding-top: 30px">
   <h3 class="articleTitle">Videos</h3>
   <hr style="margin-top: 0">
-  <div class="row" >
-    <div class="col-md-3" *ngFor="let item of items.items">
-        <p class="fontSize">{{item.value}}</p>
-        <a class="btn btn-sm btn-info text-white" (click)="prepareExternalUrl(item.value)" target="_blank">{{item.title}}</a>
-      <p class="fontSize">{{item.description}}</p>
+  <div class="row">
+  
+    <div class="col-md-3" *ngFor="let item of items.items" style="padding-bottom: 50px">
+      <div *ngIf="item.type == 'video'">
+        <iframe class="controls" width="100%" height="150px" [src]="controllerSrc" frameborder="0" allowfullscreen></iframe>
+        <a class="h4 title" (click)="prepareExternalUrl(item.value)" target="_blank">{{item.title}}</a>
+        <p class="desc">{{item.description}}</p>
+      </div>
     </div>
   </div>
 </div>
