--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -3,13 +3,13 @@
   <hr style="margin-top: 0">
   <div class="row">
   
-    <div class="col-md-3" *ngFor="let item of items.items" style="padding-bottom: 50px">
-      <div *ngIf="item.type == 'video'">
+    <div class="col-md-3" *ngFor="let item of itemsVideo.items" style="padding-bottom: 50px">
+      
         <iframe class="controls" width="100%" height="150px" [src]="item.completeUrl" frameborder="0" allowfullscreen></iframe>
         
         <a class="h4 title" (click)="prepareExternalUrl(item.value)" target="_blank">{{item.title}}</a>
         <p class="desc">{{item.description}}</p>
-      </div>
+      
     </div>
   </div>
 </div>
