resen problem za video i url

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
             <router-outlet></router-outlet> 
             <app-description></app-description>
             <app-videos></app-videos>
-            <app-linklist></app-linklist>
+            <!--<app-linklist></app-linklist>-->
             
     
             <!-- footer -->
